pkg/lang/testdata/ub/config/valid/state-and-encryption.ub
state: {
  @backend: local
  path: '.unobin/state'
}

encryption: { @key-source: env-key, env-var: 'UB_STATE_KEY' }
