pkg/lang/testdata/ub/config/invalid/state-duplicate-body-key.ub
state: { @backend: local, path: 'a', path: 'b' }
